--- a/public/styles/test-contactForm.css
+++ b/public/styles/test-contactForm.css
@@ -40,6 +40,10 @@ input:invalid + span:after {
     padding-left: 5px;
 }
 
+input:invalid {
+    border-color: #f00;
+}
+
 input:valid + span:after {
     content: '✓';
     color: #26b72b;
@@ -61,3 +65,4 @@ input:valid + span:after {
     margin: 0 auto;
     background-color: cornflowerblue;
 }
+
