--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -207,7 +207,7 @@ thead{
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index:100; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -219,27 +219,34 @@ thead{
 
 /* Modal Content/Box */
 .modal-content {
-    background-color: #fefefe;
+    background-color: #d2b7b7;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
-    border: 1px solid #888;
+    border: 1px solid #d2b7b7;
     width: 80%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
-.close {
-    color: #aaa;
+/* .close {
+    color: blue;
     float: right;
     font-size: 28px;
     font-weight: bold;
-}
+} */
 
 .close:hover,
 .close:focus {
-    color: black;
     text-decoration: none;
     cursor: pointer;
 }
 
+.modal-title{
+    text-align: center;
+    
+}
+
+label{
+    font-family: 'quicksand',Arial, Helvetica, sans-serif; 
+}
 
 
