modal show fixed, add some features on style css

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -226,6 +226,10 @@ thead{
     width: 80%; /* Could be more or less, depending on screen size */
 }
 
+.modal-backdrop {
+    z-index: 1;
+}
+
 /* The Close Button */
 /* .close {
     color: blue;
